plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'edu.sc.seis.launch4j' version '3.0.6'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url "https://maven.org/processing" }
}

dependencies {
    implementation 'org.processing:core:3.3.7'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

application {
    mainClassName = 'fr.iamacat.PEmbroiderApplication'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    useJUnitPlatform()
}

shadowJar {
    archiveFileName = 'untitled-dependencies.jar'
}

launch4j {
    mainClassName = 'fr.iamacat.PEmbroiderApplication'
    jreMinVersion = '17'
    initialHeapSize = 512
    maxHeapSize = 4096
    jvmOptions = [
            '-XX:+UseZGC'
    ]
    jarTask = tasks.shadowJar  // Utiliser la tâche shadowJar pour le JAR
    outputDirectory = file("$buildDir/libs")
    outfile = 'Catz-Embroidery.exe'
    copyConfigurable = files(tasks.named("shadowJar").get().archiveFile)
}

tasks.named("build") {
    finalizedBy tasks.named("createExe")
}